--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,8 @@
 @import "modules/common";
 @import "modules/typo";
 @import "modules/box";
+@import "modules/header";
+
 body {
   color: $textColor;
   font-family: 'Source Sans Pro', sans-serif;
