--- a/src/modules/_typo.scss
+++ b/src/modules/_typo.scss
@@ -1,9 +1,12 @@
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4,  {
   font-size: $fontTitle;
   font-weight: 600;
 }
-
+h5, h6{
+  font-weight: 200;
+  font-size: $fontSubTitle;
+}
 p {
   font-weight: 400;
-  
+
 }
