--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,7 @@
 @import "modules/typo";
 @import "modules/box";
 @import "modules/header";
+@import "modules/buttons";
 
 body {
   color: $textColor;
