--- a/src/modules/_variables.scss
+++ b/src/modules/_variables.scss
@@ -15,3 +15,9 @@ $fontSubTitle: 24px;
 
 $smallContainer: 800px;
 $normalContainer: 1280px;
+
+//buttons
+
+$button-width: 160px;
+$button-heigth: 40px;
+$border-radius: 20px;
